<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zing</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="current_clip_content">Current clip content</string>
    <string name="all_be_deleted">All Be Deleted</string>
    <string name="has_been_deleted">Has been deleted</string>
    <string name="added_time">Added time</string>
    <string name="content">Content</string>
    <string name="detail">Detail</string>
    <string name="delete_this">Delete this</string>
    <string name="delete_all">Delete all</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_to_delete_all">Are you sure to delete all?</string>
    <string name="row_number">Row number</string>
    <string name="set_max_row_numbers_key">set_max_row_numbers_key</string>
	<string name="set_max_row_numbers">Set max row numbers</string>
	<string name="language">Language</string>
	<string name="customer_language_key">customer_language_key</string>
	<string name="customer_language">Customer language</string>
	<string name="select_language_key">select_language_key</string>
	<string name="select_language">Select language</string>
	<string name="system_language">System language</string>
	<string name="effective_after_restart">Effective after restart</string>
	<string name="icon_from">The part of icons copyright holder for</string>
	<string name="icon_webset">www.iconblock.com</string>
	<string name="connect_us">Connect us</string>
	<string name="email_yvelabs">yvelabs@gmail.com</string>
	
	<string name="zing_2.0_feedback">Zing 2.0 feedback</string>
	<string name="send_sms">Send SMS</string>
	<string name="sending_sms">Sending SMS...</string>
	<string name="send_email">Send Email</string>
	<string name="sending_email">Sending Email...</string>
	<string name="feedback">Feedback</string>
<!-- 	<string name=""></string> -->
	
</resources>